# proof-of-user-digital-asset-balance

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
script/: xrex_merkle_sum_tree.ipynb  xrex_merkle_sum_tree.py
script/data/: Balance_Tree  Merkle_Tree
